@@ -87,7 +87,7 @@ REFIT_CONFIG GlobalConfig = {
     /* TextOnly = */ FALSE,
     /* ScanAllLinux = */ TRUE,
     /* DeepLegacyScan = */ FALSE,
-    /* RescanDXE = */ TRUE,
+    /* RescanDXE = */ FALSE,
     /* RansomDrives = */ FALSE,
     /* EnableAndLockVMX = */ FALSE,
     /* FoldLinuxKernels = */ TRUE,
@@ -2381,7 +2381,13 @@ EFI_STATUS EFIAPI efi_main (
     LOG_MSG("%s      ReloadGOP:- '%s'",    TAG_ITEM_B(GlobalConfig.ReloadGOP      ));
     LOG_MSG("%s      HelpTags:- '%s'",     TAG_ITEM_C(GlobalConfig.HelpTags       ));
     LOG_MSG("%s      SyncAPFS:- '%s'",     TAG_ITEM_C(GlobalConfig.SyncAPFS       ));
-    LOG_MSG("%s      CheckDXE:- '%s'",     TAG_ITEM_C(GlobalConfig.RescanDXE      ));
+    LOG_MSG("%s      CheckDXE:- ",         OffsetNext                              );
+    if (GlobalConfig.EnableMouse || GlobalConfig.EnableTouch) {
+        LOG_MSG("'Forced'"                                                         );
+    }
+    else {
+        LOG_MSG("'%s'", GlobalConfig.RescanDXE ? L"Active" : L"Inactive"           );
+    }
 
     LOG_MSG("%s      TextOnly:- ",         OffsetNext                              );
     if (ForceTextOnly) {
