@@ -69,8 +69,8 @@ decouple_key_f10      |Unmaps the `F10` key from native screenshots (the `\` key
 disable_amfi          |Disables AMFI Checks on MacOS if required
 disable_compat_check  |Disables Mac version compatibility checks if required
 disable_nvram_paniclog|Disables MacOS kernel panic logging to NVRAM
-disable_rescan_dxe    |Disables scanning for newly revealed DXE drivers when connecting handles
 enable_esp_filter     |Blocks scanning other ESPs, other than that with RefindPlus, for loaders
+enable_rescan_dxe     |Enables scanning for newly revealed DXE drivers when connecting handles
 follow_symlinks       |Allows following symbolic links to loaders (Ignored by default)
 force_trim            |Forces `TRIM` on non-Apple SSDs on Macs if required
 hidden_icons_external |Allows scanning for `.VolumeIcon` icons on external volumes
@@ -130,6 +130,7 @@ Implementation differences with the upstream base version v0.13.3 are:
 - **Apple NVRAM Protection:** RefindPlus always prevents UEFI Windows Secure Boot from saving certificates to Apple NVRAM as this can result in damage and an inability to boot. Blocking these certificates does not impact the operation of UEFI Windows on Apple Macs. This filtering only happens when Apple firmware is detected and is not applied to other types of firmware. Users that prefer not to use this feature can activate the RefindPlus-Specific `decline_nvram_protect` configuration token to switch it off.
 - **Disabled Manual Stanzas:** The processing of a user configured boot stanza is halted once a `Disabled` setting is encountered and the `Entry` object returned 'as is'. The outcome is the same as upstream, which always proceeds to create and return a fully built object in such cases (subsequently discarded), and RefindPlus, which may return a partial object (similarly discarded). However, the approach adopted in RefindPlus allows for an optimised loading process particularly when such `Disabled` tokens are placed immediately after the `menuentry` line (see examples in the [config.conf-sample-Dev](https://github.com/dakanji/RefindPlus/blob/fc18306b33b64d8473c96364cca6a557cc53530f/config.conf-sample-Dev#L1124-L1130) file). This also applies to `submenuentry` items which can be enabled or disabled separately.
 - **Pointer Priority:** The upstream implementation of pointer priority is based on how the tokens appear in the configuration file(s) when both pointer control tokens, `enable_mouse` and `enable_touch`, are active. The last token read in the main configuration file and/or any supplementary/override configuration file will be used and the other diregarded. In RefindPlus however, the `enable_touch` token always takes priority when both tokens are active without regard to the order of appearance in the configuration file(s). This means that to use a mouse in RefindPlus, the `enable_touch` token must be disabled (default) in addition to enabling the `enable_mouse` token.
+- **DXE Driver Rescan:** The upstream implementation rescans for DXE drivers in a loop until all such available instances are connected. This is because some DXE drivers in some types of firmware are only revealed after other handles are connected. However, while this process is always done, and a minimum of two (2) handle connection runs always executed, most types of firmware do not have such `hidden` DXE drivers and the process can significantly reduce load speed or result in undesirable/defective DXE drivers being connected. RefindPlus therefore defaults to only running a single handle connection loop which satisfies most types of available firmware. However, users that require additional dispatch loops to reveal and connect such DXE drivers can activate the RefindPlus-Specific `enable_rescan_dxe` token. Additionally, pressing the `ESC` key to trigger the `RescanAll` feature would, as part of the process, temporarily activate a dispatch loop for DXE drivers in the firmware.
 
 ## Roll Your Own
 Refer to [BUILDING.md](https://github.com/dakanji/RefindPlus/blob/GOPFix/BUILDING.md) for build instructions (x86_64 Only).
